// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffOperationWithSpec yields diffs for unmatched methods 1`] = `
Object {
  "kind": "UnmatchedMethod",
  "pathPattern": "/orders/{orderId}/products",
  "subject": "post",
}
`;

exports[`diffOperationWithSpec yields diffs for unmatched methods 2`] = `
Array [
  Object {
    "kind": "UnmatchedMethod",
    "pathPattern": "/orders/{orderId}/products",
    "subject": "post",
  },
  Object {
    "kind": "UnmatchedMethod",
    "pathPattern": "/orders/{orderId}/products",
    "subject": "put",
  },
]
`;

exports[`diffOperationWithSpec yields diffs for unmatched paths 1`] = `
Object {
  "kind": "UnmatchedPath",
  "subject": "/orders/{orderId}/transaction",
}
`;
